# Hormiga-Langton-Generalizada

./: CMakeLists.txt  README.md  p02_JuanNicolas_BecerraRogatinscaia_modificado.tgz
data/: data.txt
include/: ant.hpp  ant_ddii.hpp  ant_didi.hpp  ant_idid.hpp  colors.h  colours.hpp  simulator.hpp  tape.hpp
src/: ant.cpp  ant_ddii.cpp  ant_didi.cpp  ant_idid.cpp  main.cpp  simulator.cpp  tape.cpp
